03-gitops/apps/02-monitoring/hubble/hubble-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hubble.cluster
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
  tls:
    - hosts:
        - hubble.cluster
      secretName: hubble-ui-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-public-ui
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.serhii.link/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.serhii.link/oauth2/start?rd=https://$host$request_uri"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: hubble.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hubble-ui
                port:
                  number: 80
